--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,7 +5,13 @@
 @import './header';
 @import './home';
 @import './homeContent';
+@import './homeReview';
+@import './privateIntro';
 
 body {
     overflow-x: hidden;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
