--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,8 @@
 @import './homeContent';
 @import './homeReview';
 @import './privateIntro';
+@import './privateItem';
+@import './templateItem';
 
 body {
     overflow-x: hidden;
